k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mgmt
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
