k8s/sandstone_run_completed.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: SANDSTONE_NAME
  namespace: NAMESPACE
  labels:
    k8s-app: SANDSTONE_NAME
spec:
  selector:
    matchLabels:
      k8s-app: SANDSTONE_NAME
  template:
    metadata:
      labels:
        k8s-app: SANDSTONE_NAME
    spec:
      nodeSelector:
        SANDSTONE_NODE_LABEL: "true"
      containers:
      - name: SANDSTONE_NAME
        image: REGISTRY/minicluster_pnp/cluster-scope:v0.33
        command: ["/bin/bash"]
        args: ["-c", "mkdir -p /var/log/atscale; echo run-end-indicator; sync; sleep 30; \
                      echo '{\"name\": \"NOTSET\", \"runid\": \"NOTSET\", \"pipeline\": \"NOTSET\", \"buildid\": \"NOTSET\", \"buildtag\": \"NOTSET\", \"buildtimestamp\": \"NOTSET\", \"binary\": \"NOTSET\", \"testargs\": \"NOTSET\"}' | tee -a /var/log/atscale/test-metadata.ndjson |  jq -c '. += {\"type\": \"test-metadata\"}'>/hostroot/dev/console; \
              sleep infinity"]
        securityContext:
          privileged: true
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: hostroot
          mountPath: /hostroot
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: hostroot
        hostPath:
          path: /
          type: Directory
