k8s/sandstone_run_specific.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-SANDSTONE_NAME
  namespace: NAMESPACE
spec:
  podSelector:
    matchLabels:
      app: SANDSTONE_NAME
  # default deny ALL egress
  policyTypes:
  - Egress
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: NAMESPACE
  name: SANDSTONE_NAME
spec:
  selector:
    matchLabels:
      name: SANDSTONE_NAME
  template:
    metadata:
      labels:
        name: SANDSTONE_NAME
        runid: ATSCALE_RUNID
        pipeline: ATSCALE_PIPELINE
    spec:
      hostNetwork: false
      hostIPC: false
      hostPID: false
      nodeSelector:
        SANDSTONE_NODE_LABEL: "true"
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: data
          emptyDir: {}
        - name: hostroot
          hostPath:
            path: /
            type: Directory
        - name: modules
          hostPath:
            path: /lib/modules
        - name: journal
          hostPath:
            path: /var/log/journal
        - name: varlog
          hostPath:
            path: /var/log
        - name: machineid
          hostPath:
            path: /etc/machine-id
        - name: sys
          hostPath:
            path: /sys
        - name: dbus
          hostPath:
            path: /var/run/dbus
        - name: systemd
          hostPath:
            path: /run/systemd
        - name: dev
          hostPath:
            path: /dev
        CEPH_VOL_YAML
      containers:
      - name: SANDSTONE_NAME
        image: REGISTRY/sandstone:DOCKER_TAG
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /data
            name: data
          - mountPath: /dev/shm
            name: dshm
          - mountPath: /hostroot
            name: hostroot
            readOnly: false
          - mountPath: /lib/modules
            name: modules
            readOnly: true
          - mountPath: /var/log/journal
            name: journal
            readOnly: true
          - mountPath: /etc/machine-id
            name: machineid
            readOnly: true
          - mountPath: /sys
            name: sys
            readOnly: false
          - mountPath: /dev
            name: dev
            readOnly: false
          CEPH_VOLMOUNT_YAML
        #run-specific uses env vars for params
        command: ["/tests/scripts/run-specific.sh"]
        readinessProbe:
          exec:
            command:
              - cat
              - /tmp/testdone
            # Wait for 30s before checking for the first time
            # then probe for completion every 5 seconds
          initialDelaySeconds: 30
          periodSeconds: 5
        securityContext:
          privileged: true
